# EA-SMC-Engine

./: .gitignore  CLAUDE.md  README.md  build.sh
dll/: CMakeLists.txt
dll/include/: fvg_detector.h  liquidity_mapper.h  ob_tracker.h  signal_generator.h  smc_engine.h  structure_analyzer.h  swing_detector.h  types.h
dll/src/: fvg_detector.cpp  liquidity_mapper.cpp  ob_tracker.cpp  signal_generator.cpp  smc_engine.cpp  structure_analyzer.cpp  swing_detector.cpp
mql5/: EA_SMC.mq5
